[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Hud.gd" type="Script" id=1]
[ext_resource path="res://Art/Tilemap/tiles_packed.png" type="Texture" id=2]
[ext_resource path="res://Art/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 108, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 72, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 90, 36, 18, 18 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "EmptyHeart",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "FullHeart",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "HalfHeart",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HealthSprite1" type="AnimatedSprite" parent="."]
position = Vector2( 10, 20 )
frames = SubResource( 4 )
animation = "FullHeart"

[node name="HealthSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 30, 20 )
frames = SubResource( 4 )
animation = "FullHeart"

[node name="HealthSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 50, 20 )
frames = SubResource( 4 )
animation = "FullHeart"

[node name="LevelIdentifier" type="Label" parent="."]
margin_left = 245.0
margin_top = 8.0
margin_right = 309.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
text = "Joe"
